add delete user endpoint
